# SFML-Game-Dev

./: @  CMakeLists.txt  README.md
Breakout-game-/: CMakeLists.txt  README.md  `1
Breakout-game-/.github/workflows/: static-analysis.yml
Breakout-game-/src/: '  ResourceManager.cpp  ]
Breakout-game-/src/headers/: Background.h  Ball.h  Brick.h  GameConstants.h  ResourceManager.h  Texture.h
Breakout-game-/test/: PaddleTest.cpp
Conway-s-Game-of-Life-/: .gitignore  CMakeLists.txt  README.md
Conway-s-Game-of-Life-/.github/workflows/: test.yml
Conway-s-Game-of-Life-/src/: Background.cpp  Map.cpp  ResourceManager.cpp
Conway-s-Game-of-Life-/src/headers/: Button.h  Colors.h  Fonts.h  Textures.h
GameDesignElements/EventManager/: EventDetails.h
GameDesignElements/EventManager/headers/: EventInfo.h
GameDesignElements/EventManager/src/: Binding.h  EventDetails.h  EventInfo.h  EventTypes.h
Intro/src/: Game.h  Main.cpp  Window.cpp  Window.h
SimpleGames/Breakout-game-/src/: Background.cpp  Ball.cpp  BreakoutGame.cpp  Brick.cpp  Main.cpp
SimpleGames/Breakout-game-/src/headers/: BreakoutGame.h  Colors.h  Paddle.h  Sound.h
SimpleGames/Breakout-game-/test/: CMakeLists.txt
SimpleGames/Conway-s-Game-of-Life-/: README.md
SimpleGames/Conway-s-Game-of-Life-/.github/workflows/: build.yml
SimpleGames/Conway-s-Game-of-Life-/src/: Button.cpp  Cell.cpp  GameOfLife.cpp  Label.cpp  Main.cpp
SimpleGames/Conway-s-Game-of-Life-/src/headers/: Background.h  Cell.h  GameOfLife.h  Label.h  Map.h  Random.h  ResourceManager.h
SimpleGames/Conway-s-Game-of-Life-/test/: CMakeLists.txt  MapTest.cpp
SimpleGames/Snake/src/: Apple.cpp  Game.cpp  Snake.cpp  Textbox.cpp  World.cpp
SimpleGames/Snake/src/headers/: Apple.h  Snake.h  SnakeSegment.h  Textbox.h  World.h
Snake/: README.md
Snake/src/: Apple.cpp  Game.cpp  Main.cpp  Snake.cpp
Snake/src/headers/: Directions.h  Game.h  ResourceManager.h  Textbox.h  World.h
Space-Invaders/: '  @  ]
Space-Invaders/src/: @
Super-Mario/: ]
src/: Game.cpp  Main.cpp  ResourceManager.cpp  Snake.cpp  World.cpp
src/headers/: Game.h  Snake.h  World.h
